--- a/phonesensor/src/main/AndroidManifest.xml
+++ b/phonesensor/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppThemeDark" >
         <activity
@@ -18,6 +19,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ActivityAbout"
+            android:label="About PhoneSensor"
+            android:icon="@drawable/about"
+            android:theme="@style/AppThemeDark">
+        </activity>
+        <activity
+            android:name=".ActivityCopyright"
+            android:label="Copyright"
+            android:icon="@drawable/copyright"
+            android:theme="@style/AppThemeDark">
         </activity>
 
         <service
