--- a/phonesensor/src/main/AndroidManifest.xml
+++ b/phonesensor/src/main/AndroidManifest.xml
@@ -6,11 +6,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppThemeDark" >
+        android:theme="@style/AppThemeDark">
         <activity
             android:name=".ActivityPhoneSensor"
             android:label="@string/app_name">
@@ -24,18 +25,19 @@
         <service
             android:name=".ServicePhoneSensor"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
         <activity
             android:name=".ActivityPhoneSensorSettings"
-            android:label="Settings: Phone Sensor"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true"
+            android:label="Settings: Phone Sensor">
             <intent-filter>
                 <action android:name="org.md2k.phonesensor.ActivityPhoneSensorSettings" />
             </intent-filter>
             >
         </activity>
-        <meta-data android:name="com.google.android.gms.version"
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
     </application>
 </manifest>
