--- a/phonesensor/src/main/AndroidManifest.xml
+++ b/phonesensor/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         tools:replace="android:theme">
         <activity
             android:name=".ActivityMain"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,6 +33,7 @@
             android:name=".ActivityPhoneSensorSettings"
             android:enabled="true"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:label="Settings: Phone Sensor">
             <intent-filter>
                 <action android:name="org.md2k.phonesensor.ActivityPhoneSensorSettings" />
