--- a/.travis.yml
+++ b/.travis.yml
@@ -17,25 +17,22 @@ android:
   - android-23
   - extra-android-support
   - extra-android-m2repository
-
-#  - sys-img-armeabi-v7a-android-23
-  - sys-img-armeabi-v7a-android-21
-#  - sys-img-x86-android-23
-  - sys-img-x86-android-21
+  - extra-google-google_play_services
+  - sys-img-armeabi-v7a-android-23
 
 before_install:
 - git clone https://github.com/MD2Korg/mCerebrum-Utilities.git /home/travis/build/MD2Korg/mCerebrum-Utilities
 - git clone https://github.com/MD2Korg/mCerebrum-DataKitAPI.git /home/travis/build/MD2Korg/mCerebrum-DataKitAPI
 
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-#env:
-#  global:
-#    - ADB_INSTALL_TIMEOUT=8
+env:
+  global:
+    - ADB_INSTALL_TIMEOUT=8
 
 notifications:
   slack:
