--- a/phonesensor/build.gradle
+++ b/phonesensor/build.gradle
@@ -11,11 +11,19 @@ android {
         targetSdkVersion 23
         versionCode 11
         versionName '0.8.0'
+        // Enabling multidex support.
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig getSigningConfig()
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    output.outputFile = new File(output.outputFile.parent, output.outputFile.name.replace("-release", "${variant.versionName}"))
+                }
+            }
         }
     }
     productFlavors {
@@ -27,6 +35,7 @@ dependencies {
     compile project(':datakitapi')
     compile project(':utilities')
     compile 'com.google.android.gms:play-services:7.8.0'
+    compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
 }
