--- a/phonesensor/src/main/AndroidManifest.xml
+++ b/phonesensor/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.md2k.phonesensor"
     xmlns:tools="http://schemas.android.com/tools"
+    package="org.md2k.phonesensor"
     >
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -16,8 +16,8 @@
         tools:replace="android:theme">
         <activity
             android:name=".ActivityMain"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,8 +33,8 @@
             android:name=".ActivityPhoneSensorSettings"
             android:enabled="true"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:label="Settings: Phone Sensor">
+            android:label="Settings: Phone Sensor"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="org.md2k.phonesensor.ActivityPhoneSensorSettings" />
             </intent-filter>
@@ -43,5 +43,9 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="1cad146ed866fa3d49c3bc8376ff52af7d9970da" />
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
