--- a/.travis.yml
+++ b/.travis.yml
@@ -18,21 +18,13 @@ android:
   - extra-android-support
   - extra-android-m2repository
   - extra-google-google_play_services
-  - sys-img-armeabi-v7a-android-23
 
 before_install:
 - git clone https://github.com/MD2Korg/mCerebrum-Utilities.git /home/travis/build/MD2Korg/mCerebrum-Utilities
 - git clone https://github.com/MD2Korg/mCerebrum-DataKitAPI.git /home/travis/build/MD2Korg/mCerebrum-DataKitAPI
 
-before_script:
-  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
-
-env:
-  global:
-    - ADB_INSTALL_TIMEOUT=8
+script:
+  - ./gradlew build test
 
 notifications:
   slack:
