--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,16 @@ cache:
 
 android:
   components:
-  - platform-tools
-  - tools
-  - build-tools-23.0.2
-  - android-23
-  - extra-android-support
-  - extra-android-m2repository
-  - extra-google-google_play_services
+    - platform-tools
+    - tools
+    - extra-android-support
+    - extra-google-google_play_services
+    - extra-android-m2repository
+    - extra-google-m2repository
+    - build-tools-23.0.2
+    - android-23
+  licenses:
+      - '.+'
 
 before_install:
 - git clone https://github.com/MD2Korg/mCerebrum-Utilities.git /home/travis/build/MD2Korg/mCerebrum-Utilities
