--- a/phonesensor/build.gradle
+++ b/phonesensor/build.gradle
@@ -1,3 +1,6 @@
+version = '0.9.1'
+
+
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
@@ -9,6 +12,7 @@ buildscript {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply from: 'versioning.gradle'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -29,8 +33,8 @@ android {
         applicationId "org.md2k.phonesensor"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 12
-        versionName '0.9.0'
+        versionCode buildVersionCode()
+        versionName version
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     dexOptions {
