--- a/phonesensor/src/main/AndroidManifest.xml
+++ b/phonesensor/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.READ_LOGS" />`
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
