--- a/phonesensor/src/main/AndroidManifest.xml
+++ b/phonesensor/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="org.md2k.phonesensor"
-    >
+    package="org.md2k.phonesensor">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -31,6 +30,7 @@
             android:name=".ServicePhoneSensor"
             android:enabled="true"
             android:exported="true" />
+
         <activity
             android:name=".ActivityPhoneSensorSettings"
             android:enabled="true"
@@ -48,8 +48,7 @@
             android:enabled="true"
             android:exported="true"
             android:label="Permission"
-            android:screenOrientation="portrait">
-            dd</activity>
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
