--- a/phonesensor/build.gradle
+++ b/phonesensor/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.22.0'
     }
 }
 apply plugin: 'com.android.application'
@@ -16,6 +16,9 @@ apply from: 'versioning.gradle'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    maven { url 'https://jitpack.io' }
+    mavenCentral()
+
 }
 
 def store_file = "keystore_missing"
@@ -72,12 +75,12 @@ android {
             keyPassword key_password
         }
     }
-    compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "org.md2k.phonesensor"
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode buildVersionCode()
         versionName version
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -107,23 +110,20 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':datakitapi')
     compile project(':utilities')
-    compile 'com.google.android.gms:play-services:7.8.0'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true;
     }
 
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
-
     // Unit testing dependencies
     androidTestCompile 'junit:junit:4.12'
     // Set this dependency if you want to use the Hamcrest matcher library
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     // more stuff, e.g., Mockito
-
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support:support-annotations:25.1.0'
 
 }
