--- a/phonesensor/build.gradle
+++ b/phonesensor/build.gradle
@@ -1,4 +1,4 @@
-version = '1.1.2'
+version = '1.1.3'
 
 
 buildscript {
@@ -76,7 +76,7 @@ android {
         }
     }
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "org.md2k.phonesensor"
         minSdkVersion 19
@@ -108,14 +108,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':datakitapi')
     compile project(':utilities')
     compile 'com.google.android.gms:play-services:10.0.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true;
     }
-
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
     // Unit testing dependencies
@@ -125,7 +124,6 @@ dependencies {
     // more stuff, e.g., Mockito
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
-    androidTestCompile 'com.android.support:support-annotations:25.0.1'
+    androidTestCompile 'com.android.support:support-annotations:25.1.1'
     compile 'com.android.support:multidex:1.0.1'
-
 }
