--- a/phonesensor/build.gradle
+++ b/phonesensor/build.gradle
@@ -1,4 +1,4 @@
-version = '1.1.3'
+version = '1.1.4'
 
 
 buildscript {
@@ -111,7 +111,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':datakitapi')
     compile project(':utilities')
-    compile 'com.google.android.gms:play-services:10.0.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true;
     }
@@ -126,4 +125,9 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support:support-annotations:25.1.1'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'pl.charmas.android:android-reactive-location:0.10@aar'
+    compile 'com.google.android.gms:play-services-location:10.0.1' //you can use newer GMS version if you need
+    compile 'com.google.android.gms:play-services-places:10.0.1'
+    compile 'io.reactivex:rxjava:1.2.0' //you can override RxJava version if you need
+
 }
