--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+REACTIVE_LOCATION_GMS_API_KEY=AIzaSyARwbdrpm3sWL1Xv7PEu_8dRaLS3dS0pFQ
