--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 include ':phonesensor'
 include ':datakitapi'
+include ':commons', ":core"
 project(':datakitapi').projectDir=new File('../mCerebrum-DataKitAPI/datakitapi')
-include ':utilities'
-project(':utilities').projectDir=new File('../mCerebrum-Utilities/utilities')
+project(':commons').projectDir=new File('../mCerebrum-Library/commons')
+project(':core').projectDir=new File('../mCerebrum-Library/core')
