--- a/phonesensor/src/main/AndroidManifest.xml
+++ b/phonesensor/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
         android:name=".MyApplication"
@@ -45,6 +45,13 @@
             </intent-filter>
             >
         </activity>
+        <activity
+            android:name=".ActivitySettingsGeofence"
+            android:enabled="true"
+            android:exported="true"
+            android:label="Location Settings"
+            android:screenOrientation="portrait">
+            ></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
