--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 # Generated files
 bin/
 gen/
+generated/
+finalOutput/
 out/
 
 # Gradle files
@@ -35,18 +37,7 @@ captures/
 
 # IntelliJ
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
-.idea/caches
-.idea/codeStyles/
-/.idea/misc.xml
-/.idea/runConfigurations.xml
-/.idea/modules.xml
-/.idea/vcs.xml
+/.idea/*
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -70,3 +61,5 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+.DS_Sore
